<resources>
    <string name="app_name">Around Me</string>
    <string name="map_name">Map Display</string>
    <string name="settings_name">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="favorite_title">Favorites</string>
    <string name="menu_my_loc">Search My Location</string>
    <string name="menu_my_places">Search Places</string>
    <string name="menu_search_by_keyword">Search</string>
    <string name="menu_item_delete_Favorites">Delete Favorites</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_share">Share</string>
    <string name="search_place_photo">Place Photo</string>
    <string name="favorite_place_dial">Dial</string>
    <string name="favorite_place_distance">Direction</string>
    <string name="searchable">Search</string>
    <string name="msg_zero_results">Zero results found</string>
    <string name="pref_general_category_title">GENERAL</string>
    <string name="pref_search_category_title">SEARCH</string>
    <string name="pref_geofences_category_title">FAVORITES PROXIMITY</string>
    <string name="pref_lang_label">UI Language</string>
    <string name="pref_lang_label_english">English</string>
    <string name="pref_lang_label_hebrew">Hebrew</string>
    <string name="pref_units_label">Distance Units</string>
    <string name="pref_units_label_meters">Meters</string>
    <string name="pref_units_label_feet">Feet</string>
    <string name="pref_radius_label">Radius</string>
    <string name="pref_types_label_all">All</string>
    <string name="pref_types_label_restaurant_cafe_bar_nightclub">Restaurants, Cafe, Bars</string>
    <string name="pref_types_label_museum_gallery">Museums, Galleries</string>
    <string name="pref_types_label_parking">Parking</string>
    <string name="pref_types_label_bank_atm">Banks, ATMs</string>
    <string name="pref_types_label_gas">Gas stations</string>
    <string name="pref_types_label_bus_train_taxi">Bus, Train, Taxi</string>
    <string name="pref_types_label_doctor_hospital_pharmacy">Hospital, Pharmacies, Doctors</string>
    <string name="pref_geofences_radius_label">Proximity Radius</string>
    <string name="pref_geofences_notification_label">Show Notifications</string>
    <string name="pref_geofences_notification_on_label">Notifications are On</string>
    <string name="pref_geofences_notification_off_label">Notifications are Off</string>
    <string name="pref_geofences_notification_sound_label">Notifications Sound</string>
    <string name="pref_geofences_notification_sound_on_label">On</string>
    <string name="pref_geofences_notification_sound_off_label">Muted</string>
    <string name="pref_geofences_type_label">Proximity Type</string>
    <string name="pref_geofences_type_label_enter">Enter</string>
    <string name="pref_geofences_type_label_leave">Leave</string>
    <string name="pref_geofences_type_label_both">Both</string>
    <string name="formatted_away_from_me_msg">away</string>
    <string name="formatted_away_from_me_km">km</string>
    <string name="formatted_away_from_me_miles">miles</string>
    <string name="no_sensor_enabled">User Location is not available</string>
    <string name="sensor_enabled_message">For full application functionality, please enable device\'s "Location".\n\nAlso, wait until location icon stop blinking, and then retry!</string>
    <string name="sensor_gps_ok_button">GPS</string>
    <string name="sensor_network_ok_button">Network</string>
    <string name="sensor_stay_offline_button">Stay Offline</string>
    <string name="sensor_connected_message">Connected via</string>
    <string name="delete_all_title">Delete All Places</string>
    <string name="delete_all_message">Are you sure?</string>
    <string name="delete_all_delete_button">Delete</string>
    <string name="delete_all_Cancel_button">Cancel</string>
    <string name="receiver_power_connected">Connected to power source</string>
    <string name="receiver_power_disconnected">Disconnected from power source</string>
    <string name="server_error_message">Server error - Please try later</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="more_text">More…</string>
    <string name="geofence_transition_entered">You arrived to&#032;</string>
    <string name="geofence_transition_exited">You left&#032;</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_action_open">Open Settings</string>
    <string name="pref_lang_key" translatable="false">lang</string>
    <string name="pref_lang_english" translatable="false">en</string>
    <string name="pref_lang_hebrew" translatable="false">iw</string>
    <string name="pref_lang_def" translatable="false">en</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_meters" translatable="false">meters</string>
    <string name="pref_units_def" translatable="false">meters</string>
    <string name="pref_units_feet" translatable="false">feet</string>
    <string name="pref_radius_key" translatable="false">radius</string>
    <string name="pref_radius_def" translatable="false">1000</string>
    <string name="pref_types_key" translatable="false">types</string>
    <string name="pref_types_def" translatable="false">all</string>
    <string name="pref_types_all" translatable="false">all</string>
    <string name="pref_types_restaurant_cafe_bar_nightclub" translatable="false">restaurant|cafe|night_club|bar</string>
    <string name="pref_types_museum_gallery" translatable="false">museum|art_gallery</string>
    <string name="pref_types_parking" translatable="false">parking</string>
    <string name="pref_types_bank_atm" translatable="false">bank|atm</string>
    <string name="pref_types_gas" translatable="false">gas_station</string>
    <string name="pref_types_bus_train_taxi" translatable="false">bus_station|train_station|taxi_stand</string>
    <string name="pref_types_doctor_hospital_pharmacy" translatable="false">hospital|doctor|pharmacy</string>
    <string name="pref_geofences_radius_key" translatable="false">geofences_radius</string>
    <string name="pref_geofences_radius_def" translatable="false">100</string>
    <string name="pref_geofences_show_notification_key" translatable="false">notification</string>
    <string name="pref_geofences_show_notification_def" translatable="false">true</string>
    <string name="pref_geofences_show_notification_sound_key" translatable="false">sound</string>
    <string name="pref_geofences_show_notification_sound_def" translatable="false">false</string>
    <string name="pref_geofences_type_key" translatable="false">geofences_type</string>
    <string name="pref_geofences_type_def" translatable="false">both</string>
    <string name="pref_geofences_type_enter" translatable="false">enter</string>
    <string name="pref_geofences_type_leave" translatable="false">leave</string>
    <string name="pref_geofences_type_both" translatable="false">both</string>
    <string name="dialer_scheme" translatable="false">tel</string>
    <string name="https_scheme" translatable="false">https</string>
    <string name="authority" translatable="false">maps.googleapis.com</string>
    <string name="nearby_path" translatable="false">maps/api/place/nearbysearch/json</string>
    <string name="nearby_language_key" translatable="false">language</string>
    <string name="nearby_language_val_en" translatable="false">en</string>
    <string name="nearby_language_val_iw" translatable="false">iw</string>
    <string name="nearby_lat_lng_key" translatable="false">location</string>
    <string name="nearby_radius_key" translatable="false">radius</string>
    <string name="nearby_types_key" translatable="false">types</string>
    <string name="nearby_keyword_key" translatable="false">keyword</string>
    <string name="nearby_rank_key" translatable="false">rank</string>
    <string name="nearby_rank_val" translatable="false">prominence</string>
    <string name="nearby_page_token_key" translatable="false">pagetoken</string>
    <string name="nearby_api_key_key" translatable="false">key</string>
    <string name="nearby_api_key_val" translatable="false">AIzaSyBo4DP-JnD8xAcoUcvYQAqjbHKDt3I7DQQ</string>
    <string name="photo_path" translatable="false">maps/api/place/photo</string>
    <string name="photo_max_width" translatable="false">maxwidth</string>
    <string name="photo_photo_reference" translatable="false">photoreference</string>
    <string name="details_path" translatable="false">maps/api/place/details/json</string>
    <string name="details_place_id" translatable="false">placeid</string>
    <string name="directions_authority" translatable="false">maps.google.com</string>
    <string name="directions_path" translatable="false">maps</string>
    <string name="directions_req_key" translatable="false">f</string>
    <string name="directions_req_val" translatable="false">d</string>
    <string name="directions_lang_key" translatable="false">hl</string>
    <string name="directions_mode_key" translatable="false">directionsmode</string>
    <string name="directions_mode_val" translatable="false">walking</string>
    <string name="directions_start_address_key" translatable="false">saddr</string>
    <string name="directions_end_address_key" translatable="false">daddr</string>
    <string name="nearby_status_key" translatable="false">status</string>
    <string name="nearby_next_page_token_key" translatable="false">next_page_token</string>
    <string name="nearby_html_attributions_key" translatable="false">html_attributions</string>
    <string name="nearby_results_key" translatable="false">results</string>
    <string name="nearby_results_geometry_key" translatable="false">geometry</string>
    <string name="nearby_results_geometry_location_key" translatable="false">location</string>
    <string name="nearby_results_geometry_location_lat_key" translatable="false">lat</string>
    <string name="nearby_results_geometry_location_lng_key" translatable="false">lng</string>
    <string name="nearby_results_icon_key" translatable="false">icon</string>
    <string name="nearby_results_name_key" translatable="false">name</string>
    <string name="nearby_results_place_id_key" translatable="false">place_id</string>
    <string name="nearby_results_rating_key" translatable="false">rating</string>
    <string name="nearby_results_reference_key" translatable="false">reference</string>
    <string name="nearby_results_scope_key" translatable="false">scope</string>
    <string name="nearby_results_vicinity_key" translatable="false">vicinity</string>
    <string name="nearby_results_photos_key" translatable="false">photos</string>
    <string name="nearby_results_photos_height_key" translatable="false">height</string>
    <string name="nearby_results_photos_width_key" translatable="false">width</string>
    <string name="nearby_results_photos_photo_reference_key" translatable="false">photo_reference</string>
    <string name="nearby_results_photos_html_attributions_key" translatable="false">html_attributions</string>
    <string name="details_result_key" translatable="false">result</string>
    <string name="details_result_formatted_address_key" translatable="false">formatted_address</string>
    <string name="details_result_formatted_phone_number_key" translatable="false">formatted_phone_number</string>
    <string name="details_result_international_phone_number_key" translatable="false">international_phone_number</string>
    <string name="details_result_url_key" translatable="false">url</string>
    <string name="shared_pref_last_location_lat" translatable="false">last_loc_lat</string>
</resources>