<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_search_places"
        android:title="@string/menu_my_places"
        android:icon="@drawable/ic_action_search_places"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/menu_search_my_loc"
        android:title="@string/menu_my_loc"
        android:icon="@drawable/ic_action_search_my_loc"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/menu_search_by_keyword"
        android:title="@string/menu_search_by_keyword"
        android:icon="@drawable/ic_action_search_by_keyword"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings" />
</menu>
